# Customer-Sentiment-Analysis-Model

./: .gitignore  LICENSE  Quickstart Guide.docx  Quickstart Guide.txt  README.md  pre_process_and_train.py  pre_processs.py  pyproject.toml  setup_database.py  tkinter_app.py
