[tool.poetry]
name = "customer-sentiment-analysis-model"
version = "0.1.0"
description = "Evaluates customer sentiment from a rating or comment as positive, neutral, or negative."
authors = ["patmozdz <123921845+patmozdz@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
tk = "^0.1.0"
spacy = "^3.7.4"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.2"
joblib = "^1.3.2"
sqlalchemy = "^2.0.27"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
